Publish: Undervolting with SecureBoot in Linux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "UEFI",
+        "Undervolted",
         "Undervolting",
         "distro",
         "distros",
+        "secureboot",
         "undervolt",
         "untrusted"
     ]
